Decrease --narrow-mode-right-padding

--- a/src/styles/block.css
+++ b/src/styles/block.css
@@ -77,7 +77,7 @@
   }
 }
 
-.codex-editor--narrow .ce-block--focused {
+.codex-editor-for-editorjs-inline--narrow .ce-block--focused {
   @media (--not-mobile) {
     margin-right: calc(var(--narrow-mode-right-padding) * -1);
     padding-right: var(--narrow-mode-right-padding);
