--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -117,7 +117,7 @@
 /**
  * Styles for Narrow mode
  */
-.codex-editor--narrow .ce-toolbar__plus {
+.codex-editor-for-editorjs-inline--narrow .ce-toolbar__plus {
   @media (--not-mobile) {
     left: 5px;
   }
